syntax = "proto3";

import "google/protobuf/duration.proto";
option go_package = "api/proto;proto";

service EventService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse);
  rpc DeleteEvent(GetEventRequest) returns (DeleteEventResponse);

  rpc GetEventByID(GetEventRequest) returns (GetEventResponse);
  rpc GetEventsOfDay(GetEventsListRequest) returns (GetEventsListResponse);
  rpc GetEventsOfWeek(GetEventsListRequest) returns (GetEventsListResponse);
  rpc GetEventsOfMonth(GetEventsListRequest) returns (GetEventsListResponse);
}

message CreateEventRequest {
  Event event = 1;
}

message UpdateEventRequest {
  string id = 1;
  Event event = 2;
}

message GetEventRequest {
  string id = 1;
}

message GetEventsListRequest {
  DateTime date = 1;
}

message CreateEventResponse {
  string result = 1;
}

message UpdateEventResponse {
  string result = 1;
}

message DeleteEventResponse {
  string result = 1;
}

message GetEventResponse {
  Event event = 1;
  string result = 2;
}

message GetEventsListResponse {
  repeated Event events = 1;
  string result = 2;
}

message Event {
  string id = 1;
  string title = 2;
  DateTime date = 3;
  DateTime date_end = 4;
  string description = 5;
  int32 owner_id = 6;
  google.protobuf.Duration notification = 7;
}

message DateTime {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
  int32 hours = 4;
  int32 minutes = 5;
  int32 seconds = 6;
  int32 nanos = 7;
}
